<resources>
    <string name="app_name"><font color = '#548535'><font style = 'bold'>Calculator App</font></font></string>
    <string name="calculator_text"></string>
    <string name="calculator_button_one">1</string>
    <string name="calculator_button_two">2</string>
    <string name="calculator_button_three">3</string>
    <string name="calculator_button_four">4</string>
    <string name="calculator_button_five">5</string>
    <string name="calculator_button_six">6</string>
    <string name="calculator_button_seven">7</string>
    <string name="calculator_button_eight">8</string>
    <string name="calculator_button_nine">9</string>
    <string name="calculator_button_zero">0</string>
    <string name="calculator_button_decimal">.</string>
    <string name="calculator_button_divide">/</string>
    <string name="calculator_button_multiply">*</string>
    <string name="calculator_button_add">+</string>
    <string name="calculator_button_subtract">-</string>
    <string name="calculator_button_clear">CLR</string>
    <string name="calculator_button_equals">=</string>
    <string name="Divide_by_zero_error_message">No. >:[</string>
</resources>