<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/lightBlue"
        android:padding="10dp"
        android:textColor="@color/darkBlue"
        android:textSize="60sp"
        android:text="@string/calculator_text"
        android:gravity="end|bottom"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/buttonSeven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:textColor="@color/darkGreen"
            android:text="@string/calculator_button_seven"
            android:textSize="25dp"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/buttonEight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:textColor="@color/darkGreen"
            android:text="@string/calculator_button_eight"
            android:textSize="25dp"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/buttonNine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:textColor="@color/darkGreen"
            android:text="@string/calculator_button_nine"
            android:textSize="25dp"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:textColor="@color/darkGreen"
            android:text="@string/calculator_button_divide"
            android:textSize="25dp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/buttonFour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:textColor="@color/darkGreen"
            android:text="@string/calculator_button_four"
            android:textSize="25dp"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/buttonFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:textColor="@color/darkGreen"
            android:text="@string/calculator_button_five"
            android:textSize="25dp"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/buttonSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:textColor="@color/darkGreen"
            android:text="@string/calculator_button_six"
            android:textSize="25dp"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:textColor="@color/darkGreen"
            android:text="@string/calculator_button_multiply"
            android:textSize="25dp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/buttonOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:textColor="@color/darkGreen"
            android:text="@string/calculator_button_one"
            android:textSize="25dp"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/buttonTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:textColor="@color/darkGreen"
            android:text="@string/calculator_button_two"
            android:textSize="25dp"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/buttonThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:textColor="@color/darkGreen"
            android:text="@string/calculator_button_three"
            android:textSize="25dp"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/buttonSubtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:textColor="@color/darkGreen"
            android:text="@string/calculator_button_subtract"
            android:textSize="25dp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/buttonDecimal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDecimal"
            android:textColor="@color/darkGreen"
            android:text="@string/calculator_button_decimal"
            android:textSize="25dp"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/buttonZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:textColor="@color/darkGreen"
            android:text="@string/calculator_button_zero"
            android:textSize="25dp"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/buttonClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onClear"
            android:textColor="@color/darkGreen"
            android:text="@string/calculator_button_clear"
            android:textSize="25dp"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:onClick="onOperator"
            android:textColor="@color/darkGreen"
            android:text="@string/calculator_button_add"
            android:textSize="25dp"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_weight="1"
    >
    <Button
        android:id="@+id/buttonEquals"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:layout_margin="2dp"
        android:onClick="onEqual"
        android:textColor="@color/darkGreen"
        android:text="@string/calculator_button_equals"
        android:textSize="25dp"
        android:textStyle="bold"
        />

    </LinearLayout>

 </LinearLayout>